<resources>
    <string name="app_name">Formula Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="settings_title">Settings</string>
    <string-array name="unit_types">
        <item name="mass">Mass</item>
        <item name="speed">Speed</item>
        <item name="length">Length</item>
        <item name="temperature">Temperature</item>
        <item name="volume">Volume</item>
        <item name="area">Area</item>
        <item name="data">Data</item>
    </string-array>
    <string-array name="square">
        <item name="title"> Square </item>
        <item name="thumbnail">@drawable/ic_square</item>
    </string-array>
    <string-array name="circle">
        <item name="title"> Circle </item>
        <item name="thumbnail">@drawable/ic_circle</item>
    </string-array>
    <string-array name="sphere">
        <item name="title"> Sphere </item>
        <item name="thumbnail"></item>
    </string-array>
    <string-array name="triangle">
        <item name="title"> Triangle </item>
        <item name="thumbnail"> </item>
        <item name="triangle_area">Triangle Area</item>
        <item name="triangle_perimeter">Triangle Perimeter</item>
        <item name="triangle_ssa">Triangle Side Side Angle</item>
        <item name="triangle_asa">Triangle Angle Side Angle</item>
        <item name="triangle_sas">Triangle Side Angle Side</item>
        <item name="triangle_sss">Triangle Side Side Side</item>
        <item name="triangle_aas">Triangle Angle Angle Side</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main_activity_fragment">MainActivityFragment</string>
    <string name="example">Example</string>
    <string name="select_dialog_title">Select a spot to store the result.</string>
    <string name="reset_vars">Reset Stored Variables</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="evaluate">Evaluate</string>
    <string name="area">Area</string>
    <string name="perimeter">Perimeter</string>
    <string name="input_error"> Input Error! </string>
    <string name="settings_dummy">
        <p> Here is some text! </p> \n\t
            &#8226; item one \n \t
             &#8226; item two \n \t
            &#8226; item three\n \t
    </string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus_simbol">-</string>
    <string name="exp_symbol">^</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="equal_sign">=</string>
    <string name="par_left">(</string>
    <string name="par_right">)</string>
    <string name="del">DEL</string>
    <string name="_c">C</string>
    <string name="pi">π</string>
    <string name="var_e">e</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="str">str</string>
    <string name="rel">rel</string>
    <string name="factorial">!</string>
    <string name="percent_symbol">%</string>
    <string name="infinity_symbol">∞</string>
    <string name="deg">DEG</string>
    <string name="radians_button">RAD</string>
    <string name="degree_button">DEG</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ans">Ans</string>
    <string name="frac">Frac</string>
    <string name="save_theme">Save Theme</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="create_theme">Create New Theme</string>
    <string name="plus_minus">+/-</string>
    <string name="delete_string">R</string>
    <string name="cube_root">\u00B3\u221A</string>
    <string name="sine_inverse">sin\u207B\u00B9</string>
    <string name="cos_inverse">cos\u207B\u00B9</string>
    <string name="tan_inverse">tan\u207B\u00B9</string>
    <string name="tax_input">tax</string>
    <string name="input_arcsin">arcSin</string>
    <string name="input_arccos">arcCos</string>
    <string name="input_arctan">arcTan</string>
    <string name="par1">par1</string>
    <string name="par2">par2</string>
    <string name="par3">par3</string>
    <string name="par4">par4</string>
    <string name="par5">par5</string>
    <string name="par6">par6</string>
    <string name="par7">par7</string>
    <string name="par8">par8</string>
    <string name="namePar1">Parenthesis 1</string>
    <string name="namePar2">Parenthesis 2</string>
    <string name="namePar3">Parenthesis 3</string>
    <string name="namePar4">Parenthesis 4</string>
    <string name="namePar5">Parenthesis 5</string>
    <string name="namePar6">Parenthesis 6</string>
    <string name="namePar7">Parenthesis 7</string>
    <string name="namePar8">Parenthesis 8</string>
    <string name="par_key">parenthesisColors</string>
    <string name="tax_key">tax_key</string>
    <string name="tax_description">Tax Percentage</string>
    <string name="tax_def_value">8.81</string>
    <string name="precision_key">precision_key</string>
    <string name="precision_title">Precision.</string>
    <string name="precision_def_value">6</string>
    <string name="precision_description">The number of decimals. 0 = System Default.</string>
    <string name="calc_layout_key">calcLayout</string>
    <string name="keypad_cellphone">Keypad: 1, 2, 3&#8430;</string>
    <string name="keypad_standard">Standard: 7, 8, 9&#8430;</string>
    <string name="keypad_cellphone_value">cellphone</string>
    <string name="keypad_standard_value">standard</string>
    <string-array name="layout_types">
        <item>@string/keypad_cellphone</item>
        <item>@string/keypad_standard</item>
    </string-array>
    <string-array name="layout_types_values">
        <item>@string/keypad_cellphone_value</item>
        <item>@string/keypad_standard_value</item>
    </string-array>
    <string name="font_pref_title">Font Settings</string>
    <string name="font_size_pref_title">Font Sizes</string>
    <string name="button_font_pref_title">Button Font Sizes</string>
    <string name="font_size_key">fontSizeKey</string>
    <string name="buttons_font_size_key">buttonFontSizeKey</string>
    <string name="font_size_def">default</string>
    <string name="display_font_pref_title">Display Text Size</string>
    <string name="display_font_size_def">default</string>
    <string name="display_font_key">displayFontSizeKey</string>
    <string name="font_family_title">Font Style</string>
    <string name="font_family_key" translatable="false">font_family_key</string>
    <string name="font_family_default_value" translatable="false">light</string>
    <string name="font_normal">normal</string>
    <string name="font_thin">thin</string>
    <string name="font_cond">condensed</string>
    <string name="font_light">light</string>
    <string-array name="font_family">
        <item>Normal</item>
        <item>Thin</item>
        <item>Condensed</item>
        <item>Light</item>
    </string-array>
    <string-array name="font_family_values">
        <item>normal</item>
        <item>thin</item>
        <item>condensed</item>
        <item>light</item>
    </string-array>
    <string-array name="font_sizes">
        <item>X Small</item>
        <item>Small</item>
        <item>Default</item>
        <item>Large</item>
        <item>X Large</item>
    </string-array>
    <string name="xsmall">xsmall</string>
    <string name="small">small</string>
    <string name="large">large</string>
    <string name="xlarge">xlarge</string>
    <string-array name="font_size_values">
        <item>xsmall</item>
        <item>small</item>
        <item>default</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
    <string name="ui_settings">UI Settings</string>
    <string name="par_colors">Parenthesis Colors</string>
    <string name="calc_layout">Calculator Layout</string>
    <string name="sales_tax">Tax</string>
    <string name="placeholder">Some Text here</string>
    <string name="fromHint">From...</string>
    <string name="toHint">To...</string>
    <string name="placeholder_result_input">2 + 5 / 10</string>
    <string name="placeholder_result">2.2</string>
    <string name="current_input_key">current_input_key</string>
    <string name="current_input">current_input</string>
    <string name="list_card_undo_title">Undo</string>
    <plurals name="list_card_undo_items">
        <item quantity="one">1 recent removed</item>
        <item quantity="other">%d recent removed</item>
    </plurals>
</resources>