<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:icon="@drawable/ic_font_size"
        android:title="@string/button_font_pref_title"
        android:key="@string/buttons_font_size_key"
        android:defaultValue="@string/font_size_def"
        android:entries="@array/font_sizes"
        android:entryValues="@array/font_size_values"
    />

    <ListPreference
        android:icon="@drawable/ic_display"
        android:title="@string/display_font_pref_title"
        android:key="@string/display_font_key"
        android:defaultValue="@string/display_font_size_def"
        android:entries="@array/font_sizes"
        android:entryValues="@array/font_size_values"
    />

    <ListPreference
        android:icon="@drawable/ic_typeface"
        android:title="@string/font_family_title"
        android:key="@string/font_family_key"
        android:defaultValue="@string/font_family_default_value"
        android:entries="@array/font_family"
        android:entryValues="@array/font_family_values"
    />

</PreferenceScreen>