<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gabilheri.formulacalculator.main.fragments.CalculatorFragment">

    <LinearLayout
        android:id="@+id/rowButtons1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.14"
        android:orientation="horizontal">

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypadClear"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_c"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypadDel"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/del"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/parLeft"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:text="@string/par_left"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/parRight"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:text="@string/par_right"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/plus"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/button_2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/plus"
            

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowButtons2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="2dip"
        android:layout_weight="0.14"
        android:orientation="horizontal">

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/btnPercent"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/percent_symbol"
            

            />


        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_1"
            

            />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_2"
            

            />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad3"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_3"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/minus"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/button_2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/minus_simbol"
            

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowButtons3"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="2dip"
        android:layout_weight="0.14"
        android:orientation="horizontal">

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypadPwr"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/exp_symbol"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad4"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_4"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad5"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_5"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad6"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_6"
            

            />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/multiply"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/button_2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/multiply"
            

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowButtons4"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="2dip"
        android:layout_weight="0.14"
        android:orientation="horizontal">

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypadStore"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/str"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad7"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_7"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad8"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"

            android:text="@string/_8"
            

            />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad9"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_9"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/divide"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/button_2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/divide"
            

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowButtons5"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="2dip"
        android:layout_weight="0.14"
        android:orientation="horizontal">

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypadRelease"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/rel"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypadDot"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|top"
            android:text="@string/dot"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/keypad0"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/_0"
             />

        <com.gabilheri.formulacalculator.main.xmlElements.DefaultButton
            android:id="@+id/equal"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="0.4"
            android:text="@string/equal_sign"
             />
    </LinearLayout>

</LinearLayout>